// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShiftSelectDialog > renders correctly 1`] = `
<div
  data-v-bcde2181=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-bcde2181=""
    iconcolor="secondary-text"
    title="Select shift"
    titleicon="M15,13H16.5V15.82L18.94,17.23L18.19,18.53L15,16.69V13M19,8H5V19H9.67C9.24,18.09 9,17.07 9,16A7,7 0 0,1 16,9C17.07,9 18.09,9.24 19,9.67V8M5,21C3.89,21 3,20.1 3,19V5C3,3.89 3.89,3 5,3H6V1H8V3H16V1H18V3H19A2,2 0 0,1 21,5V11.1C22.24,12.36 23,14.09 23,16A7,7 0 0,1 16,23C14.09,23 12.36,22.24 11.1,21H5M16,11.15A4.85,4.85 0 0,0 11.15,16C11.15,18.68 13.32,20.85 16,20.85A4.85,4.85 0 0,0 20.85,16C20.85,13.32 18.68,11.15 16,11.15Z"
  />
  <v-card-text-stub
    class="d-flex flex-column dialog-content py-0"
    data-v-bcde2181=""
    tag="div"
  >
    <v-row-stub
      data-v-bcde2181=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="d-flex justify-center"
        cols="12"
        data-v-bcde2181=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <evocon-v-date-picker-stub
          data-v-bcde2181=""
          double="false"
          getalloweddates="[Function]"
          max="2023-01-23T12:00:00"
          max-width="max-content"
          min="2020-01-01"
          modelvalue="2021-01-01"
          pickerdate="2021-01"
          range="false"
          show-adjacent-months=""
          small="false"
        />
      </v-col-stub>
      <v-col-stub
        cols="12"
        data-v-bcde2181=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <div
          data-v-bcde2181=""
        >
          <p
            class="font-weight-bold text-center my-4 text-body-large"
            data-v-bcde2181=""
          >
            Shifts
          </p>
          <v-chip-group-stub
            centeractive="false"
            class="centered"
            column="true"
            data-v-bcde2181=""
            direction="horizontal"
            disabled="false"
            filter="false"
            mandatory="false"
            multiple="false"
            nexticon="$next"
            previcon="$prev"
            scrolltoactive="false"
            selectedclass="v-chip--selected"
            showarrows="false"
            symbol="Symbol(vuetify:v-slide-group)"
            tag="div"
            valuecomparator="[Function]"
            variant="tonal"
          >
            
            <evocon-v-chip-stub
              active="false"
              allowgrow="false"
              class="ma-1"
              dark="false"
              data-v-bcde2181=""
              disabled="false"
              error="false"
              icon="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              iconclass=""
              imgsrc=""
              label=""
              size="default"
              type="primary"
            />
            
          </v-chip-group-stub>
        </div>
      </v-col-stub>
    </v-row-stub>
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-bcde2181=""
    tag="div"
  >
    <v-spacer-stub
      data-v-bcde2181=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-bcde2181=""
      icon=""
      iconcolor=""
      id="cancel-button"
      text="Cancel"
      textclass=""
      type="secondary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`ShiftSelectDialog > renders correctly in mobile landscape 1`] = `
<div
  data-v-bcde2181=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-bcde2181=""
    iconcolor="secondary-text"
    title="Select shift"
    titleicon="M15,13H16.5V15.82L18.94,17.23L18.19,18.53L15,16.69V13M19,8H5V19H9.67C9.24,18.09 9,17.07 9,16A7,7 0 0,1 16,9C17.07,9 18.09,9.24 19,9.67V8M5,21C3.89,21 3,20.1 3,19V5C3,3.89 3.89,3 5,3H6V1H8V3H16V1H18V3H19A2,2 0 0,1 21,5V11.1C22.24,12.36 23,14.09 23,16A7,7 0 0,1 16,23C14.09,23 12.36,22.24 11.1,21H5M16,11.15A4.85,4.85 0 0,0 11.15,16C11.15,18.68 13.32,20.85 16,20.85A4.85,4.85 0 0,0 20.85,16C20.85,13.32 18.68,11.15 16,11.15Z"
  />
  <v-card-text-stub
    class="d-flex flex-column dialog-content py-0 dialog-content--mobile"
    data-v-bcde2181=""
    tag="div"
  >
    <v-row-stub
      data-v-bcde2181=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="d-flex justify-center"
        cols="6"
        data-v-bcde2181=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <evocon-v-date-picker-stub
          data-v-bcde2181=""
          double="false"
          getalloweddates="[Function]"
          max="2023-01-23T12:00:00"
          max-width="max-content"
          min="2020-01-01"
          modelvalue="2021-01-01"
          pickerdate="2021-01"
          range="false"
          show-adjacent-months=""
          small="true"
        />
      </v-col-stub>
      <v-col-stub
        cols="6"
        data-v-bcde2181=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <div
          data-v-bcde2181=""
        >
          <p
            class="font-weight-bold text-center my-4 text-body-medium"
            data-v-bcde2181=""
          >
            Shifts
          </p>
          <v-chip-group-stub
            centeractive="false"
            class="centered"
            column="true"
            data-v-bcde2181=""
            direction="horizontal"
            disabled="false"
            filter="false"
            mandatory="false"
            multiple="false"
            nexticon="$next"
            previcon="$prev"
            scrolltoactive="false"
            selectedclass="v-chip--selected"
            showarrows="false"
            symbol="Symbol(vuetify:v-slide-group)"
            tag="div"
            valuecomparator="[Function]"
            variant="tonal"
          >
            
            <evocon-v-chip-stub
              active="false"
              allowgrow="false"
              class="ma-1"
              dark="false"
              data-v-bcde2181=""
              disabled="false"
              error="false"
              icon="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              iconclass=""
              imgsrc=""
              label=""
              size="small"
              type="primary"
            />
            
          </v-chip-group-stub>
        </div>
      </v-col-stub>
    </v-row-stub>
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-bcde2181=""
    tag="div"
  >
    <v-spacer-stub
      data-v-bcde2181=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-bcde2181=""
      icon=""
      iconcolor=""
      id="cancel-button"
      text="Cancel"
      textclass=""
      type="secondary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`ShiftSelectDialog > renders correctly in mobile portait 1`] = `
<div
  data-v-bcde2181=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-bcde2181=""
    iconcolor="secondary-text"
    title="Select shift"
    titleicon="M15,13H16.5V15.82L18.94,17.23L18.19,18.53L15,16.69V13M19,8H5V19H9.67C9.24,18.09 9,17.07 9,16A7,7 0 0,1 16,9C17.07,9 18.09,9.24 19,9.67V8M5,21C3.89,21 3,20.1 3,19V5C3,3.89 3.89,3 5,3H6V1H8V3H16V1H18V3H19A2,2 0 0,1 21,5V11.1C22.24,12.36 23,14.09 23,16A7,7 0 0,1 16,23C14.09,23 12.36,22.24 11.1,21H5M16,11.15A4.85,4.85 0 0,0 11.15,16C11.15,18.68 13.32,20.85 16,20.85A4.85,4.85 0 0,0 20.85,16C20.85,13.32 18.68,11.15 16,11.15Z"
  />
  <v-card-text-stub
    class="d-flex flex-column dialog-content py-0 dialog-content--mobile"
    data-v-bcde2181=""
    tag="div"
  >
    <v-row-stub
      data-v-bcde2181=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="d-flex justify-center"
        cols="12"
        data-v-bcde2181=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <evocon-v-date-picker-stub
          data-v-bcde2181=""
          double="false"
          getalloweddates="[Function]"
          max="2023-01-23T12:00:00"
          max-width="max-content"
          min="2020-01-01"
          modelvalue="2021-01-01"
          pickerdate="2021-01"
          range="false"
          show-adjacent-months=""
          small="true"
        />
      </v-col-stub>
      <v-col-stub
        cols="12"
        data-v-bcde2181=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <div
          data-v-bcde2181=""
        >
          <p
            class="font-weight-bold text-center my-4 text-body-medium"
            data-v-bcde2181=""
          >
            Shifts
          </p>
          <v-chip-group-stub
            centeractive="false"
            class="centered"
            column="true"
            data-v-bcde2181=""
            direction="horizontal"
            disabled="false"
            filter="false"
            mandatory="false"
            multiple="false"
            nexticon="$next"
            previcon="$prev"
            scrolltoactive="false"
            selectedclass="v-chip--selected"
            showarrows="false"
            symbol="Symbol(vuetify:v-slide-group)"
            tag="div"
            valuecomparator="[Function]"
            variant="tonal"
          >
            
            <evocon-v-chip-stub
              active="false"
              allowgrow="false"
              class="ma-1"
              dark="false"
              data-v-bcde2181=""
              disabled="false"
              error="false"
              icon="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              iconclass=""
              imgsrc=""
              label=""
              size="small"
              type="primary"
            />
            
          </v-chip-group-stub>
        </div>
      </v-col-stub>
    </v-row-stub>
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-bcde2181=""
    tag="div"
  >
    <v-spacer-stub
      data-v-bcde2181=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-bcde2181=""
      icon=""
      iconcolor=""
      id="cancel-button"
      text="Cancel"
      textclass=""
      type="secondary"
    />
  </v-card-actions-stub>
</div>
`;
